# One-Man-Business-Multi-Agent-Orchestrator-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  insert_user.py  package.json  patch_memory_agent.py  pyproject.toml  signup.py  skills-lock.json  vercel-deply.md
api/: index.py
backend/: __init__.py  config.py  main.py
backend/agents/: MEMORY.md  RESEARCH_SKILL.md  RULE.md  SOUL.md  __init__.py  memory_agent.py  orchestrator_agent.py  policy_agent.py  reply_agent.py  research_agent.py  retrieval_agent.py  retriever_agent.py  triage_agent.py  update_agent.py
backend/agents/skills/competitor-intelligence/: SKILL.md
backend/agents/skills/confidence-calibration/: SKILL.md
backend/agents/skills/market-pricing-research/: SKILL.md
backend/agents/tools/: skills.py
backend/api/: __init__.py  router.py
backend/data/: generate_policies.py  generate_seed_data.py  policy_metadata.py
backend/db/: Database_guide.md  ENABLE_RLS.sql  SCHEMA.sql  __init__.py  engine.py  generate_policies.py  generate_seed_data.py  ingest_business_data.py  ingest_policies.py  init_db.py  load_seed_data.py  models.py  orm_models.py  policy_metadata.py  reset_and_seed_supabase.py  seed.py  seed_auth_users.py  session.py
backend/graph/: __init__.py  pipeline_graph.py  state.py
backend/integrations/: telegram_sender.py  telegram_webhook.py
backend/models/: __init__.py  agent_response.py
backend/nodes/: __init__.py  approval_rules.py  context_builder.py  intake.py  receiver.py  risk.py  risk_llm.py  risk_rules.py
backend/policies/: generate_policies.py
backend/services/: approval_service.py  conversation_memory.py  identity_resolution.py  supabase_client.py
backend/tools/: policy_tools.py  retrieval_tools.py  role_permissions.py
backend/utils/: context_compression.py  context_quarantine.py  error_handler.py  langfuse.py  llm_provider.py  logging.py  pipeline_guards.py
frontend/: Dockerfile  OWNER_QA_REPORT.md  README.md  mock.sql  next.config.ts  notes.md  package-lock.json  package.json
frontend/e2e/: owner.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: action-overlay.tsx  app-shell.tsx  approval-card.tsx  confirm-action-dialog.tsx  data-table.tsx  logout-button.tsx  section-card.tsx  shell-boundary.tsx  sidebar.tsx  stat-card.tsx  topbar.tsx
frontend/src/hooks/: use-daily-digest.ts  use-memory.ts  use-owner-dashboard.ts  use-pending-approvals.ts  use-products.ts  use-stakeholders.ts
frontend/src/lib/: api-client.ts  api.ts  backend.ts  mock-data.ts  query-keys.ts  stakeholder-auth.ts  stakeholder-config.ts  types.ts
frontend/src/providers/: query-provider.tsx
paper/: generate_appendix_eval_plot.py  generate_appendix_test_coverage_plot.py  paper.tex
tests/: conftest.py  test_agents.py  test_approval_rules.py  test_discount_negotiation.py  test_identity_resolution.py  test_intake_node.py  test_p1.py  test_p2_risk_rules.py  test_p2_semantic.py  test_pipeline_integration.py  test_pipeline_skeleton.py  test_policy_tools.py  test_retrieval_agent.py  test_retrieval_tools.py  test_risk_node.py  test_run.py  test_safe_agent.py  verify_db.py
tests/policy_agent/: evaluate_answers.py  evaluate_chunking.py  evaluate_embeddings.py  evaluate_reranking.py  evaluate_retrieval.py  generate_ground_truth.py  test_policy_agent.py
tests/reply_agent/: evaluate.py  generate_ground_truth.py
tests/research_agent/: evaluate.py  generate_ground_truth.py
tests/retrieval_agent/: evaluate_end_to_end.py  evaluate_tool_selection.py  generate_ground_truth.py  test_retrieval_agent.py  test_retrieval_tools.py
tests/risk_node/: evaluate.py  generate_ground_truth.py
(+69 files in other folders)
