[project]
name = "multi-agent-orchestrator"
version = "0.1.0"
description = "A Role-Aware Multi-Agent Auto-Reply System with Structured Memory, Retrieval, and Risk-Controlled Planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langgraph>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["backend"]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
